[tool.poetry]
name = "ezmsg-zmq"
version = "1.1.6"
description = "Zero-MQ pub/sub units for ezmsg"
authors = [
  "Milsap, Griffin <griffin.milsap@gmail.com>",
  "Peranich, Preston <pperanich@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "ezmsg", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pyzmq = "^25.1.2"
ezmsg = "^3.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "*"
flake8 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
