[project]
name = "ezmsg-zmq"
description = "Zero-MQ pub/sub units for ezmsg"
authors = [
  { name = "Griffin Milsap", email = "griffin.milsap@gmail.com" },
  { name = "Preston Peranich", email = "pperanich@gmail.com" },
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ezmsg>=3.6.0",
    "pyzmq>=25.1.2",
    'tornado>=6.4.2; platform_system == "Windows"',
]
dynamic = ["version"]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "typer>=0.12.5",
]
lint = [
    "ruff>=0.12.9",
]
test = [
    "flake8",
    "pytest-cov",
    "pytest>=8.3.3",
    "numpy>=2.0.2",
]
docs = [
  "sphinx>=7.0",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "pydata-sphinx-theme",
  "myst-parser",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/zmq/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
